crates/ruff/src/rules/flake8_bugbear/snapshots/ruff__rules__flake8_bugbear__tests__B025_B025.py.snap
---
source: crates/ruff/src/rules/flake8_bugbear/mod.rs
---
B025.py:19:8: B025 try-except block with duplicate exception `ValueError`
   |
19 | except ValueError:
20 |     a = 2
21 | except ValueError:
   |        ^^^^^^^^^^ B025
22 |     a = 2
   |

B025.py:28:8: B025 try-except block with duplicate exception `pickle.PickleError`
   |
28 | except ValueError:
29 |     a = 2
30 | except pickle.PickleError:
   |        ^^^^^^^^^^^^^^^^^^ B025
31 |     a = 2
   |

B025.py:35:8: B025 try-except block with duplicate exception `ValueError`
   |
35 | except (ValueError, TypeError):
36 |     a = 2
37 | except ValueError:
   |        ^^^^^^^^^^ B025
38 |     a = 2
39 | except (OSError, TypeError):
   |

B025.py:37:18: B025 try-except block with duplicate exception `TypeError`
   |
37 | except ValueError:
38 |     a = 2
39 | except (OSError, TypeError):
   |                  ^^^^^^^^^ B025
40 |     a = 2
   |


